--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> Python, C, Windows Trouble Shooting, Server, Network, ITSD</p>
+<p> Git, Linux, Windows, Android, IOS </p>
